# llmnode

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: defaults.yaml  models.yaml
config/backends/: llama.cpp_qwen36-35b-a3b-f16.yaml  llama.cpp_qwen36-35b-a3b-q4km.yaml  sglang_qwen36-35b-a3b-fp8.yaml  vllm_qwen3-vl-8b-instruct-fp8.yaml  vllm_qwen36-27b.yaml  (+5 more)
docs/: blueprintV1.md  blueprintV2.md  blueprintV3.md  blueprintV4.md  glossary.md
llmnode/: config.py  control.py  diagnostics.py  logging.py  main.py  models.py  runtime.py  runtime_paths.py  security.py
runtime/: claude_code_smoke.txt
scripts/: _patch_docs.py  benchmark_backend.py  control.sh  runtime_paths.sh  start_agent.sh  start_gateway.sh  start_vllm.sh  stop_agent.sh  stop_gateway.sh  stop_vllm.sh
tests/: conftest.py  test_admin_api_keys.py  test_admin_control_plane.py  test_admin_model_routes.py  test_admin_stream.py  test_agent.py  test_api_anthropic.py  test_api_key_runtime_limits.py  test_api_metrics.py  test_api_openai.py  test_api_responses.py  test_api_responses_native.py  test_auth_api_keys.py  test_control.py  test_control_web_console.py  test_docker_control.py  test_e2e.py  test_model_routes_phase1.py  test_perf_backend_probe.py  test_perf_benchmark.py  test_perf_gpu_probe.py  test_request_logs_api_keys.py  test_smoke.py  test_storage_api_keys.py  test_storage_metrics.py  test_storage_model_routes.py  test_storage_responses.py
web-console/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+113 files in other folders)
