[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmnode"
version = "0.1.0"
description = "Personal LLM gateway for Claude Code and OpenAI clients"
requires-python = ">=3.11"
dependencies = [
  "docker>=7.1",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["llmnode*"]
